; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_anm.c_op.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_anm.c_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i32*, i32, i32, i32*, i32, i32)* @op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @op(i32** %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32** %0, i32*** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  %20 = load i32, i32* %16, align 4
  %21 = load i32*, i32** %15, align 8
  %22 = load i32, i32* %21, align 4
  %23 = sub nsw i32 %20, %22
  store i32 %23, i32* %18, align 4
  br label %24

24:                                               ; preds = %95, %8
  %25 = load i32, i32* %14, align 4
  %26 = icmp sgt i32 %25, 0
  br i1 %26, label %27, label %96

27:                                               ; preds = %24
  %28 = load i32, i32* %14, align 4
  %29 = load i32, i32* %18, align 4
  %30 = call i32 @FFMIN(i32 %28, i32 %29)
  store i32 %30, i32* %19, align 4
  %31 = load i32*, i32** %12, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %45

33:                                               ; preds = %27
  %34 = load i32*, i32** %12, align 8
  %35 = call i32 @bytestream2_get_bytes_left(i32* %34)
  %36 = load i32, i32* %19, align 4
  %37 = icmp slt i32 %35, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %33
  br label %101

39:                                               ; preds = %33
  %40 = load i32*, i32** %12, align 8
  %41 = load i32**, i32*** %10, align 8
  %42 = load i32*, i32** %41, align 8
  %43 = load i32, i32* %19, align 4
  %44 = call i32 @bytestream2_get_bufferu(i32* %40, i32* %42, i32 %43)
  br label %55

45:                                               ; preds = %27
  %46 = load i32, i32* %13, align 4
  %47 = icmp sge i32 %46, 0
  br i1 %47, label %48, label %54

48:                                               ; preds = %45
  %49 = load i32**, i32*** %10, align 8
  %50 = load i32*, i32** %49, align 8
  %51 = load i32, i32* %13, align 4
  %52 = load i32, i32* %19, align 4
  %53 = call i32 @memset(i32* %50, i32 %51, i32 %52)
  br label %54

54:                                               ; preds = %48, %45
  br label %55

55:                                               ; preds = %54, %39
  %56 = load i32, i32* %19, align 4
  %57 = load i32**, i32*** %10, align 8
  %58 = load i32*, i32** %57, align 8
  %59 = sext i32 %56 to i64
  %60 = getelementptr inbounds i32, i32* %58, i64 %59
  store i32* %60, i32** %57, align 8
  %61 = load i32, i32* %19, align 4
  %62 = load i32, i32* %18, align 4
  %63 = sub nsw i32 %62, %61
  store i32 %63, i32* %18, align 4
  %64 = load i32, i32* %19, align 4
  %65 = load i32, i32* %14, align 4
  %66 = sub nsw i32 %65, %64
  store i32 %66, i32* %14, align 4
  %67 = load i32, i32* %18, align 4
  %68 = icmp sle i32 %67, 0
  br i1 %68, label %69, label %78

69:                                               ; preds = %55
  %70 = load i32, i32* %17, align 4
  %71 = load i32, i32* %16, align 4
  %72 = sub nsw i32 %70, %71
  %73 = load i32**, i32*** %10, align 8
  %74 = load i32*, i32** %73, align 8
  %75 = sext i32 %72 to i64
  %76 = getelementptr inbounds i32, i32* %74, i64 %75
  store i32* %76, i32** %73, align 8
  %77 = load i32, i32* %16, align 4
  store i32 %77, i32* %18, align 4
  br label %78

78:                                               ; preds = %69, %55
  %79 = load i32, i32* %17, align 4
  %80 = icmp sgt i32 %79, 0
  br i1 %80, label %81, label %88

81:                                               ; preds = %78
  %82 = load i32**, i32*** %10, align 8
  %83 = load i32*, i32** %82, align 8
  %84 = load i32*, i32** %11, align 8
  %85 = icmp uge i32* %83, %84
  br i1 %85, label %86, label %87

86:                                               ; preds = %81
  br label %101

87:                                               ; preds = %81
  br label %95

88:                                               ; preds = %78
  %89 = load i32**, i32*** %10, align 8
  %90 = load i32*, i32** %89, align 8
  %91 = load i32*, i32** %11, align 8
  %92 = icmp ule i32* %90, %91
  br i1 %92, label %93, label %94

93:                                               ; preds = %88
  br label %101

94:                                               ; preds = %88
  br label %95

95:                                               ; preds = %94, %87
  br label %24

96:                                               ; preds = %24
  %97 = load i32, i32* %16, align 4
  %98 = load i32, i32* %18, align 4
  %99 = sub nsw i32 %97, %98
  %100 = load i32*, i32** %15, align 8
  store i32 %99, i32* %100, align 4
  store i32 0, i32* %9, align 4
  br label %106

101:                                              ; preds = %93, %86, %38
  %102 = load i32, i32* %16, align 4
  %103 = load i32, i32* %18, align 4
  %104 = sub nsw i32 %102, %103
  %105 = load i32*, i32** %15, align 8
  store i32 %104, i32* %105, align 4
  store i32 1, i32* %9, align 4
  br label %106

106:                                              ; preds = %101, %96
  %107 = load i32, i32* %9, align 4
  ret i32 %107
}

declare dso_local i32 @FFMIN(i32, i32) #1

declare dso_local i32 @bytestream2_get_bytes_left(i32*) #1

declare dso_local i32 @bytestream2_get_bufferu(i32*, i32*, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
